--- a/app/src/main/res/layout/fragment_kaydol.xml
+++ b/app/src/main/res/layout/fragment_kaydol.xml
@@ -6,26 +6,24 @@
     android:layout_height="match_parent"
     tools:context=".KaydolFragment">
 
-
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <EditText
+        android:id="@+id/editTextText"
+        android:layout_width="379dp"
+        android:layout_height="47dp"
         android:layout_marginTop="4dp"
-        android:text="Hesap oluştur"
-        android:textColor="#F4F0F0"
-        android:textSize="16sp"
-        android:textStyle="bold"
+        android:background="#AAA6A6"
+        android:backgroundTint="#AAA6A6"
+        android:ems="10"
+        android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="346dp"
         android:layout_height="91dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="64dp"
         android:text="E-posta adresin\nnedir"
         android:textColor="#F4F0F0"
         android:textSize="40sp"
@@ -33,27 +31,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.246"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5" />
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <EditText
-        android:id="@+id/editTextText"
-        android:layout_width="379dp"
-        android:layout_height="47dp"
-        android:layout_marginTop="15dp"
-        android:background="#AAA6A6"
+    <Button
+        android:id="@+id/buttonSonraki"
+        android:layout_width="113dp"
+        android:layout_height="48dp"
+        android:layout_marginTop="52dp"
+        android:layout_marginBottom="305dp"
         android:backgroundTint="#AAA6A6"
-        android:ems="10"
-        android:inputType="text"
+        android:text="Sonraki"
+        android:textColor="#0C0C0C"
+        android:textSize="15sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.449"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="8dp"
         android:text="Daha sonra bu e-postayı onaylaman\ngerekecek"
         android:textColor="#F4F0F0"
         android:textSize="16sp"
@@ -62,20 +63,5 @@
         app:layout_constraintHorizontal_bias="0.103"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/editTextText" />
-
-    <Button
-        android:id="@+id/button"
-        android:layout_width="113dp"
-        android:layout_height="48dp"
-        android:layout_marginTop="10dp"
-        android:backgroundTint="#AAA6A6"
-        android:text="Sonraki"
-        android:textColor="#0C0C0C"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
