Spotify (Android Studio) ninth Update

--- a/app/src/main/res/menu/after_login_bottom_menu.xml
+++ b/app/src/main/res/menu/after_login_bottom_menu.xml
@@ -3,6 +3,7 @@
 
     <item
         android:id="@+id/anasayfaFragment"
+        android:contentDescription="deneme"
         android:icon="@drawable/anasayfa_resim"
         android:title="Anasayfa" />
     <item
