--- a/app/src/main/res/layout/fragment_page_holder_after_login.xml
+++ b/app/src/main/res/layout/fragment_page_holder_after_login.xml
@@ -27,7 +27,8 @@
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/bottomNav"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/page_holder_after_login_nav" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
