--- a/app/src/main/res/layout/card_tasarim_anasayfa.xml
+++ b/app/src/main/res/layout/card_tasarim_anasayfa.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="10dp"
+    android:layout_margin="10dp">
 
     <androidx.cardview.widget.CardView
         android:id="@+id/CardView"
@@ -42,8 +44,10 @@
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="7dp"
                 android:layout_marginBottom="6dp"
+                android:padding="5dp"
                 android:background="#3E3D3D"
                 android:text="Beğenilen\nŞarkılar"
+                android:textAlignment="center"
                 android:textColor="@color/white"
                 android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
